<?xml version="1.0"?>
<package format="2">
  <name>mqtt_monitor</name>
  <version>0.1.0</version>
  <description>The mqtt_monitor package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="robinchen@nexcobot.com">Robin Chen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/mqtt_monitor</url> -->
  <url type="repository">https://github.com/RobinCPC/mqtt_monitor</url>
  <url type="bugtracker">https://github.com/RobinCPC/mqtt_monitor/issues</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="robinchen@nexcobot.com">Robin Chen</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Add SRB packge depend -->
  <depend>robot_gateway</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
